# blue-beetle

./: .gitignore  README.md
python-bs4/: bs4_default.py  bs4_html5lib.py  bs4_lxml.py  bs4_xml.py
rust-tl/: Cargo.toml
rust-tl/src/: main.rs
rust_parser/: Cargo.toml  pyproject.toml  rust_parser_default.py  test.py
rust_parser/src/: lib.rs
