[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
select = "0.6.0"